--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,12 +7,16 @@
     },
     "plugins": [ "@typescript-eslint" ],
     "rules": {
+        "indent": ["error", 4],
+        "linebreak-style": ["error", "windows"],
+        "quotes": ["error", "double"],
         "@typescript-eslint/naming-convention": "warn",
         "@typescript-eslint/semi": ["warn", "always", { "omitLastInOneLineBlock": true }],
         "curly": ["warn", "multi-or-nest"],
         "eqeqeq": "warn",
         "no-throw-literal": "warn",
-        "no-var": "error"
+        "no-var": "error",
+        "@typescript-eslint/no-unused-vars": ["error", { "vars":"all", "args": "none" }]
     },
     "ignorePatterns": [
         "node_modules/",
