--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@types/react-dom": "^17.0.9",
     "i18next": "^20.3.2",
     "i18next-browser-languagedetector": "^6.1.2",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.11.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "sass": "^1.35.2",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.172",
     "@types/react-router-dom": "^5.1.8"
   }
 }
